@@ -141,6 +141,7 @@ DFHACK_EXPORT std::string getRaceChildName(df::unit* unit);
 DFHACK_EXPORT bool isBaby(df::unit* unit);
 DFHACK_EXPORT bool isChild(df::unit* unit);
 DFHACK_EXPORT bool isAdult(df::unit* unit);
+DFHACK_EXPORT bool isAnimal(df::unit* unit);
 DFHACK_EXPORT bool isEggLayer(df::unit* unit);
 DFHACK_EXPORT bool isGrazer(df::unit* unit);
 DFHACK_EXPORT bool isMilkable(df::unit* unit);
@@ -163,6 +164,11 @@ DFHACK_EXPORT bool isActive(df::unit *unit);
 DFHACK_EXPORT bool isKilled(df::unit *unit);
 DFHACK_EXPORT bool isGelded(df::unit* unit);
 DFHACK_EXPORT bool isDomesticated(df::unit* unit);
+DFHACK_EXPORT bool isDemon(df::unit* unit);
+DFHACK_EXPORT bool isTitan(df::unit* unit);
+DFHACK_EXPORT bool isMegabeast(df::unit* unit);
+DFHACK_EXPORT bool isSemiMegabeast(df::unit* unit);
+DFHACK_EXPORT bool isNightCreature(df::unit* unit);
 
 DFHACK_EXPORT double getAge(df::unit *unit, bool true_age = false);
 DFHACK_EXPORT int getKillCount(df::unit *unit);
